# OptimusPi

./: LICENSE  README
LineFollower/: I2CCommands.ino  LineFollower.h  LineFollower.ino  QTR8RCSensor.ino
MotorDriver/: I2CCommands.ino  MotorDriver.h  MotorDriver.ino  Motors.ino
Tests/: MotorTest.py  MotorTest.py.bak  QTR-8RCTest.cpp  QTR8RCSenseHat.cpp  SenseHATTest.py  VL6180Test.cpp
src/: CMakeLists.txt  OptimusPiConfig.h.in  main.cpp  main.cpp.bak
src/PiWars/: Brains.cpp  Brains.cpp.bak  Brains.h  Brains.h.bak  CMakeLists.txt  I2C.cpp  I2C.cpp.bak  I2C.h  InputDevice.cpp  InputDevice.h  InputEvent.cpp  InputEvent.h  InputManager.cpp  InputManager.h  Menu.cpp  Menu.h  MessageQueue.h  PiWars.cpp  PiWars.h  Powertrain.cpp  Powertrain.h  Sensor.h  Sensor.h.bak  SensorQTR8RC.cpp  SensorQTR8RC.h  SensorRTIMU.cpp  SensorRTIMU.h  SensorVL6180.cpp  SensorVL6180.cpp.bak  SensorVL6180.h  SensorVL6180.h.bak  ThoughtProcess.h  ThoughtProcess.h.bak  ThoughtProcess_LineFollower.cpp  ThoughtProcess_LineFollower.h  ThoughtProcess_Manual.cpp  ThoughtProcess_Manual.cpp.bak  ThoughtProcess_Manual.h  ThoughtProcess_Manual.h.bak  ThoughtProcess_Proximity.cpp  (+8 more)
